redactable/tests/ui/not_sensitive_value_output_rejected.rs
use redactable::{NotSensitiveValue, ToRedactedOutput};

fn require_output<T: ToRedactedOutput>(_: &T) {}

fn main() {
    require_output(&NotSensitiveValue(String::from("ambiguous")));
}
